assets/css/style.css
/*Language Test----------------------------------------*/
.nl {
  display: block;
}
.en {
  display: none;
}

/*Colors--------------------------------------------*/
body {
  font-weight: 300;
  overflow-x: hidden;
  }

html, body, .container-fluid, .row {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*Special Paddings/Margins/Text---------------------------------------------*/

h1,
h2,
h3,
h4 {
  margin: 0;
}

.general-sub {
  font-weight: 300;
}

.inline-block {
  display: inline-block;
}

.uppercase {
  text-transform: uppercase;
}

.section-column {
  padding: 0 30px 30px;
  display: block;
}

.row-table {
  display: table;
}

.section-heading {
  font-weight: 300;
  margin: 25px 0 40px 0;
}

/*Header---------------------------------------------*/

header {
  margin: 0;
}

.heading {
  margin-left: 50px;
}

.logo {
  background: url("../images/profilepic.JPG");
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 360px;
  transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
}

.name {
  font-weight: 100;
  font-size: 50px;
  margin-top: 50px;
}

.title {
  font-weight: 200;
  font-size: 30px;
  margin-top: 20px;
  margin-bottom: 80px;
}

.btn-lang {
  position: absolute;
  right: 0%;
}

.navbar {
  margin: 0 -15px;
}

#nav {
  margin: 0;
}

#nav li {
  padding: 0;
}

.menuitem {
  height: 120px;
  text-align: center;
  padding: 0;
  background-color: rgba(153, 51, 204, 0.5);
}

.menuitem a {
  width: 100%;
  text-decoration: none;
  height: 120px;
  color: whitesmoke
}

.menuitem a i {
  padding-top: 22px;
  display: block;
  font-size: 28px;
}

.menuitem a p {
  width: 100%;
  padding-top: 5px;
  text-align: center;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 300;
  letter-spacing: 2px;
}

/*Hover.css----------------------------------*/

#nav .active,
.hvr-sweep-to-bottom:before {
  height: 120px;
  background-color: rgb(153, 51, 204);
}

/*Footer---------------------------------------------*/
footer {
  min-height: 120px;
  margin: 0;
  background-color: rgba(153, 51, 204, 0.5);
}

footer .fa {
  color: whitesmoke;
  font-size: 2em;
}

#footer-details .col-sm-4{
  margin: 20px;
  text-align: center;
  border-bottom: 2px solid black;
  padding-bottom: 5px
}

footer .fa {
  text-align: center;
  font-size: 2em;
  padding-left: 5px;
  transition: all 0.35s ease-in-out;
  -o-transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  -webkit-transition: all 0.35s ease-in-out;
}

footer .fa:hover {
  color: rgb(153, 51, 204);
}

.social-links {
  padding-bottom: 15px;
}

/* 404 Page */
.lost {
  background: url("../images/lost.jpg");
  background-color: rgba(0, 0, 0, 0.4);
  background-blend-mode: darken;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  text-align: center;
}

.lost .text {
  text-decoration: none;
  color: whitesmoke;
  font-weight: 900;
  font-size: xx-large;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.lost .large {
  font-size: xx-large;
}

/*ThreeReasons---------------------------------------------*/

.three-reasons-icon {
  font-size: 26px;
}

.three-reasons-heading {
  margin-bottom: 15px;
  font-weight: 600;
}

/*PersonalInfo---------------------------------------------*/

.personal-info-item {
  margin-bottom: 20px;
  display: block;
  clear: both;
}

.personal-info-item .key,
.personal-info-item .value {
  padding-right: 8px;
}

.personal-info-item .key p,
.personal-info-item .value p {
  margin: 0;
}

.personal-info-item .key {
  display: inline-block;
  width: 30%;
  margin-right: 21px;
  padding-top: 2px;
  vertical-align: top;
}

.personal-info-item .key p {
  font-weight: 700;
}

.personal-info-item .value {
  display: inline-block;
  position: relative;
  width: 60%;
}
/*Skills---------------------------------------------*/

.progress {
  position: relative;
  height: 25px;
}

.progress-type {
  position: absolute;
  left: 0px;
  font-size: large;
  color: whitesmoke;
  padding: 3px 30px 2px 10px;
}

.progress-section {
  margin: 40px 20px;
}



/*WorkHistory---------------------------------------------*/

.timeline-item {
  padding: 4em 2em 0em 2em;
  position: relative;
  border-left: 1px solid;
}

.timeline-item p {
  padding: 0;
  margin: 0;
}

.timeline-item::before {
  content: attr(dates);
  position: absolute;
  left: 2.5em;
  top: 3em;
  display: block;
  font-weight: 500;
  font-size: 0.8em;
  padding: 0;
  margin: 0;
}

.timeline-item::after {
  width: 12px;
  height: 12px;
  display: block;
  top: 2.4em;
  position: absolute;
  left: -6px;
  border-radius: 50%;
  content: "";
  background: #616161;
}

.work-history {
  text-align: center
}
.work-history .cv-pdf .fa {
  font-size: 100px;
  color: rgba(153, 51, 204, 0.5);
}

.work-history .cv-pdf .fa:hover {
  color: rgb(153, 51, 204);
}



/*Contact--------------------------------------*/
.contact-heading {
  font-weight: 300;
  margin-top: 25px;
  margin-bottom: 20px;
}

.center-form input,
.center-form textarea {
  padding-top: 10px;
  margin: 10 auto;
  max-width: 80%;
  background-color: rgba(153, 51, 204, 0.5)
}

button[type="submit"] {
  margin-top: 25px;
  margin-bottom: 20px;
  background-color: rgba(153, 51, 204, 0.5);
}

button:hover {
  background-color: rgb(153, 51, 204);
}

/*Portfolio--------------------------------------*/
.gh-content img {
  margin: 25px;
}

.gh-content img:hover {
  border: 5px solid rgb(153, 51, 204);
}

.gh-content a {
  color: rgba(153, 51, 204, 0.5);
}

.gh-content a:hover {
  text-decoration: none;
  color: rgb(153, 51, 204);
}

.gh-user {
  text-align: center;
}

.repo-list table {
  border-collapse: separate;
  display: none;
}

th,
td {
  padding: 10px;
}

.card {
  border-radius: 20px;
  background-color: rgba(153, 51, 204, 0.5);
  border: 5px solid black;
  text-align: center;
}

.card .btn,
table .btn {
  margin: 5px;
  color: whitesmoke;
}

.card .btn:hover,
table .btn:hover {
  border: 1px solid white;
  color: whitesmoke;
}

/*Responsiveness--------------------------------------*/
@media screen and (min-width: 481px) {
  .section-column {
    padding: 0 30px 30px;
    float: none;
    display: table-cell;
  }

  #footer-details .col-sm-4{
    margin: 0;
    text-align: center;
    border-bottom: 0;
    padding-bottom: 25px
  }

  .center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 50%;
  }

  .download-section {
    min-height: 400px;
  }

  .download-header {
    padding-top: 50px;
    padding-bottom: 100px;
  }

  .download-section a {
    font-size: 50px;
  }

  .download-section i {
    font-size: 100px;
  }

  .repo-list table {
    display: block;
  }

  .repo-list .card {
    display: none;
  }

  header {
    min-height: 35vh;
  }
  
  section {
    min-height: 45vh;
  }

  section alert {
    top: 0;
    position: absolute;
  }

  footer {
    min-height: 10vh;
    width: 100vw;
    bottom: 0;
  }
}

